fix: abstract fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -51,11 +51,14 @@
 
 \begin{abstract}
 
-    This master's thesis presents an in-depth approach to addressing fairness and bias mitigation in the design and development of data-driven methods. The primary contribution of this study is the proposal and implementation of an innovative Fair-by-Design workflow that incorporates various strategies for bias mitigation within data, algorithms, and decision-making processes. \\
-    The research focuses on the educational data of the Canary Islands, leveraging a dataset encompassing detailed information about student performance and educational outcomes. The primary objective is to ensure equitable and unbiased application of data-driven algorithms within the educational context. \\
-    The methodology involves the systematic evaluation of multiple bias mitigation strategies, including techniques for algorithmic fairness, data preprocessing, and model calibration. The critical aspect of this research centers on the comparison of these strategies based on their impact on the predictive accuracy of the algorithms. This approach provides practical insights into the trade-offs between fairness and accuracy. \\
-    The research findings offer valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods for educational data. Through the proposed Fair-by-Design workflow, the study demonstrates how to strike a balance between ensuring fairness and maintaining the accuracy of predictions. \\
+    This work presents an in-depth approach to addressing fairness and bias mitigation in the design and development of data-driven methods. The primary contribution of this study is the proposal and implementation of an innovative \emph{Fair-by-Design} workflow that incorporates various strategies for bias mitigation within data, algorithms, and decision-making processes. \\
+    The research focuses on the educational data of the Canary Islands, leveraging a dataset encompassing detailed information about student performance and educational outcomes. \\
+    The primary objective is to ensure equitable and unbiased application of data-driven algorithms within the educational context. \\
+    The methodology involves the systematic evaluation of multiple bias mitigation strategies, including techniques for algorithmic fairness, data preprocessing, and model calibration. The critical aspect of this research centers on the comparison of these strategies based on their impact on the predictive accuracy of the algorithms. \\ 
+    This approach provides practical insights into the trade-offs between fairness and accuracy. \\
+    The research findings offer valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods for educational data. Through the proposed \emph{Fair-by-Design} workflow, the study demonstrates how to strike a balance between ensuring fairness and maintaining the accuracy of predictions. \\
     This thesis contributes to the ongoing discourse on fairness in machine learning and data-driven decision-making. The results provide guidance for stakeholders in the education sector, aiding them in making informed decisions about algorithm deployment to promote fairness and minimize bias within educational systems. \\
+    \\
     \textbf{Keywords:} Fair-by-Design, Bias Mitigation, Educational Data, Canary Islands, Algorithmic Fairness, Predictive Accuracy, Comparative Analysis.
     
     \end{abstract}
@@ -818,7 +821,7 @@ This module is the core of the whole algorithm. This module contains other two s
 
             disparate_impact_value = _compute_disparate_impact_for_proxy(
                 antecedent, consequent,original_dataset)
-                
+
             if not 0.8 < disparate_impact_value < 1.25 and _proxy_format_to_column(antecedent) not in protected_attributes:
                 dataset = _remove_proxy_from_dataset(original_dataset, antecedent)
 
