--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -870,7 +870,8 @@ This module is the core of the whole algorithm. This module contains other two s
         pd.DataFrame: returns the dataframe in which the proxies do not lead to fairness
     """
     proxy_variables = return_proxy_variables(original_dataset)
-    proxy_variables_for_sensitive_attributes = _return_proxy_protected_attribute(proxy_variables,
+    proxy_variables_for_sensitive_attributes = 
+    _return_proxy_protected_attribute(proxy_variables,
                                                                                  protected_attributes)
     
     dataset = original_dataset
