fix: text fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -741,7 +741,7 @@ More specifically:
 
 \subsection{Goal of this work}
 At the core of this endeavor lies a fundamental goal: to predict the level of English proficiency for students in their current grade based on their past experiences and academic trajectory. This predictive undertaking is driven by a commitment to harness data-driven insights and analytical methodologies to empower educational institutions and decision-makers in enhancing the educational experience and opportunities for students. \\
-To achieve this ambitious objective, a critical aspect of the workflow is the computation of the "level_ing" attribute, employing the same pre-processing transformations that have been meticulously applied to the non-binary protected attributes. These transformations serve as the cornerstone for establishing a uniform basis for analysis and prediction. \\
+To achieve this ambitious objective, a critical aspect of the workflow is the computation of the "level\textunderscore ing" attribute, employing the same pre-processing transformations that have been meticulously applied to the non-binary protected attributes. These transformations serve as the cornerstone for establishing a uniform basis for analysis and prediction. \\
 The ultimate aim is to match students to discern whether a given student falls into one of two categories: either being under the mean English proficiency level or exceeding the mean. This binary categorization is essential for designing effective interventions, personalized learning pathways, and targeted support systems. \\
 By matching students to these categories, it becomes feasible to identify patterns, trends, and critical factors that influence students' English proficiency. This predictive model, rooted in the wealth of data encapsulated within the ULL dataset, offers a powerful tool for educational institutions and stakeholders to proactively address disparities, tailor educational strategies, and ensure that students receive the support and opportunities they need to thrive.
 \newpage
